--- a/dice.html
+++ b/dice.html
@@ -7,33 +7,21 @@
 
   <style>
     :root{
-      --bg:#0a0d12;
-      --bg-2:#0e1117;
-      --panel:#0d1117;
-      --card:#111722;
-      --card-2:#0f1520;
+      --bg:#0a0d12; --bg-2:#0e1117; --panel:#0d1117;
+      --card:#111722; --card-2:#0f1520;
       --stroke: rgba(255,255,255,.06);
       --stroke-2: rgba(100,160,255,.25);
-      --blue:#3b82f6;
-      --blue-2:#1d4ed8;
-      --text:#e6edf3;
-      --muted:#98a2b3;
-      --radius:18px;
-      --radius-sm:12px;
-      --shadow: 0 0 0 1px var(--stroke), 0 8px 30px rgba(0,0,0,.6);
+      --blue:#3b82f6; --blue-2:#1d4ed8;
+      --text:#e6edf3; --muted:#98a2b3;
+      --radius:18px; --shadow: 0 0 0 1px var(--stroke), 0 8px 30px rgba(0,0,0,.6);
     }
     html[data-theme="light"]{
-      --bg:#f4f7fb;
-      --bg-2:#eef2f7;
-      --panel:#ffffff;
-      --card:#ffffff;
-      --card-2:#f6f8fb;
+      --bg:#f4f7fb; --bg-2:#eef2f7; --panel:#ffffff;
+      --card:#ffffff; --card-2:#f6f8fb;
       --stroke: rgba(10,20,40,.08);
       --stroke-2: rgba(59,130,246,.35);
-      --blue:#2563eb;
-      --blue-2:#1d4ed8;
-      --text:#0b1220;
-      --muted:#52607a;
+      --blue:#2563eb; --blue-2:#1d4ed8;
+      --text:#0b1220; --muted:#52607a;
       --shadow: 0 0 0 1px var(--stroke), 0 10px 26px rgba(10,20,40,.08);
     }
     *{box-sizing:border-box}
@@ -45,36 +33,24 @@
         radial-gradient(1000px 600px at 10% -10%, rgba(59,130,246,.28), transparent 60%),
         radial-gradient(800px 500px at 110% 0%, rgba(29,78,216,.22), transparent 55%),
         linear-gradient(180deg, var(--bg-2) 0%, var(--bg) 100%);
-      min-height:100vh;
-      display:flex;
-      align-items:flex-start;
-      justify-content:center;
-      padding:16px;
+      min-height:100vh; display:flex; justify-content:center; padding:16px;
     }
     .app{
       width:min(900px,100%);
-      background: linear-gradient(180deg, rgba(255,255,255,.03), rgba(255,255,255,0));
       border:1px solid var(--stroke);
-      border-radius:20px;
-      box-shadow: var(--shadow);
-      padding:14px;
+      border-radius:20px; box-shadow: var(--shadow);
+      padding:14px; background: linear-gradient(180deg, rgba(255,255,255,.03), rgba(255,255,255,0));
     }
-    header{
-      display:flex;align-items:center;justify-content:space-between;
-      padding:10px 12px 14px;gap:10px;
-    }
+    header{display:flex;align-items:center;justify-content:space-between;padding:10px 12px 14px;gap:10px;}
     .title{display:flex;flex-direction:column;gap:2px;}
-    .title h1{margin:0;font-size:20px;font-weight:800;letter-spacing:.2px;}
+    .title h1{margin:0;font-size:20px;font-weight:800;}
     .title span{font-size:12px;color:var(--muted);}
-
     .balance-pill{
-      margin-left:auto;display:flex;align-items:center;gap:8px;
+      display:flex;align-items:center;gap:8px;
       padding:7px 10px;border-radius:999px;font-weight:800;font-size:14px;
       background: linear-gradient(180deg, var(--card) 0%, var(--card-2) 100%);
       border:1px solid var(--stroke);box-shadow: var(--shadow);
     }
-    .balance-coin{filter: drop-shadow(0 0 6px rgba(59,130,246,.35));}
-
     .back{
       display:inline-flex;align-items:center;gap:8px;padding:8px 12px;border-radius:10px;
       background: linear-gradient(180deg, var(--card) 0%, var(--card-2) 100%);
@@ -82,106 +58,60 @@
       cursor:pointer;transition:.15s ease;
     }
     .back:hover{border-color:var(--stroke-2);transform:translateY(-1px);}
-
     .section{
       background: linear-gradient(180deg, var(--panel) 0%, color-mix(in oklab, var(--panel) 92%, transparent) 100%);
       border:1px solid var(--stroke);
-      border-radius:16px;
-      padding:14px;
-      box-shadow: var(--shadow);
-      margin-bottom:12px;
+      border-radius:16px;padding:14px;box-shadow: var(--shadow);margin-bottom:12px;
     }
-    .section h2{margin:0 0 10px;font-size:18px;}
-
-    .controls{
-      display:flex;flex-wrap:wrap;gap:10px;align-items:center;
-    }
+    .controls{display:flex;flex-wrap:wrap;gap:10px;align-items:center;}
     .input{
       display:flex;align-items:center;gap:8px;
       background: linear-gradient(180deg, var(--card) 0%, var(--card-2) 100%);
-      border:1px solid var(--stroke);
-      padding:8px 10px;border-radius:12px;
+      border:1px solid var(--stroke);padding:8px 10px;border-radius:12px;
       font-weight:700;font-size:14px;
     }
     .input input{
       width:60px;padding:6px 8px;border-radius:8px;border:1px solid var(--stroke);
-      background: transparent;color:var(--text);font-weight:800;font-size:15px;outline:none;
-      text-align:center;
+      background: transparent;color:var(--text);font-weight:800;font-size:15px;outline:none;text-align:center;
     }
-
     .btn{
       padding:10px 14px;border-radius:12px;border:1px solid var(--stroke-2);
       background: linear-gradient(180deg, var(--blue) 0%, var(--blue-2) 100%);
-      color:white;font-weight:900;letter-spacing:.2px;cursor:pointer;
+      color:white;font-weight:900;cursor:pointer;transition:.15s ease;
       box-shadow: 0 6px 18px rgba(37,99,235,.35);
-      transition:.15s ease;
     }
-    .btn:hover{transform:translateY(-1px);filter:saturate(1.1);}
-    .btn:disabled{opacity:.6;cursor:not-allowed;transform:none;filter:none;}
-
-    .arena{
-      display:grid;grid-template-columns:1fr 1fr;gap:12px;
-    }
+    .btn:hover{transform:translateY(-1px);}
+    .btn:disabled{opacity:.6;cursor:not-allowed;transform:none;}
+    .arena{display:grid;grid-template-columns:1fr 1fr;gap:12px;}
     .player-box{
       background: linear-gradient(180deg, var(--card) 0%, var(--card-2) 100%);
-      border:1px solid var(--stroke);
-      border-radius:14px;padding:12px;min-height:140px;
+      border:1px solid var(--stroke);border-radius:14px;padding:12px;min-height:140px;
     }
-    .player-head{
-      display:flex;align-items:center;justify-content:space-between;margin-bottom:8px;
-    }
+    .player-head{display:flex;align-items:center;justify-content:space-between;margin-bottom:8px;}
     .player-head h3{margin:0;font-size:16px;font-weight:900;}
     .sum{
-      font-weight:900;font-size:16px;color:var(--text);
-      padding:4px 8px;border-radius:999px;border:1px solid var(--stroke);
+      font-weight:900;font-size:16px;padding:4px 8px;border-radius:999px;border:1px solid var(--stroke);
       background: color-mix(in oklab, var(--panel) 75%, transparent);
     }
-
-    .dice-row{
-      display:flex;flex-wrap:wrap;gap:8px;
-    }
+    .dice-row{display:flex;flex-wrap:wrap;gap:8px;}
     .die{
-      width:48px;height:48px;border-radius:10px;
-      display:grid;place-items:center;
-      font-size:22px;font-weight:900;
-      background: rgba(59,130,246,.10);
-      border:1px solid rgba(59,130,246,.28);
-      box-shadow: inset 0 0 14px rgba(59,130,246,.18);
-      transform: translateY(0);
-      transition: transform .06s linear;
+      width:48px;height:48px;border-radius:10px;display:grid;place-items:center;
+      font-size:22px;font-weight:900;background: rgba(59,130,246,.10);
+      border:1px solid rgba(59,130,246,.28);box-shadow: inset 0 0 14px rgba(59,130,246,.18);
     }
-    .die.rolling{
-      animation: roll .5s ease-in-out infinite;
-    }
-    @keyframes roll{
-      0%{transform:translateY(0) rotate(0deg)}
-      50%{transform:translateY(-4px) rotate(8deg)}
-      100%{transform:translateY(0) rotate(0deg)}
-    }
-
-    .result{
-      font-size:16px;font-weight:900;margin-top:10px;
-    }
-    .result.win{color:#22c55e;}
-    .result.lose{color:#ef4444;}
-    .result.draw{color:#f59e0b;}
-
-    .note{
-      font-size:12px;color:var(--muted);margin-top:6px;line-height:1.4;
-    }
-
+    .die.rolling{animation: roll .5s ease-in-out infinite;}
+    @keyframes roll{0%{transform:translateY(0)}50%{transform:translateY(-4px)}100%{transform:translateY(0)}}
+    .result{font-size:16px;font-weight:900;margin-top:10px;}
+    .result.win{color:#22c55e;} .result.lose{color:#ef4444;} .result.draw{color:#f59e0b;}
+    .note{font-size:12px;color:var(--muted);margin-top:6px;line-height:1.4;}
     .toast{
       position:fixed;left:50%;bottom:18px;transform:translateX(-50%) translateY(20px);
-      background: rgba(11,16,24,.95);
-      border:1px solid var(--stroke-2);
+      background: rgba(11,16,24,.95);border:1px solid var(--stroke-2);
       color:var(--text);padding:10px 14px;border-radius:12px;font-size:13px;
       opacity:0;transition:.2s ease;box-shadow: var(--shadow);z-index:9999;pointer-events:none;white-space:nowrap;
     }
     .toast.show{opacity:1;transform:translateX(-50%) translateY(0);}
-
-    @media (max-width: 720px){
-      .arena{grid-template-columns:1fr;}
-    }
+    @media (max-width: 720px){.arena{grid-template-columns:1fr;}}
   </style>
 </head>
 <body>
@@ -193,7 +123,7 @@
         <span>Кто больше — тот победил</span>
       </div>
       <div class="balance-pill">
-        <span class="balance-coin">🪙</span>
+        <span>🪙</span>
         <span id="balanceValue">0</span>
       </div>
     </header>
@@ -205,12 +135,9 @@
           🧊 Кубиков:
           <input id="diceCount" type="number" min="1" max="5" value="1" />
         </label>
-
         <button id="rollBtn" class="btn">Бросить 🎲</button>
       </div>
-      <div class="note">
-        Максимум 5 кубиков за раз. Ставок нет — только очки за победу.
-      </div>
+      <div id="tgWarn" class="note"></div>
     </section>
 
     <section class="section arena">
@@ -248,20 +175,16 @@
           if(!tg) return false;
           tg.ready(); tg.expand();
           const p = tg.themeParams || {};
-          const bg = p.bg_color;
-          const text = p.text_color;
-          const hint = p.hint_color;
-          const secondary = p.secondary_bg_color;
-          if(bg) document.documentElement.style.setProperty("--bg", bg);
-          if(secondary) document.documentElement.style.setProperty("--panel", secondary);
-          if(text) document.documentElement.style.setProperty("--text", text);
-          if(hint) document.documentElement.style.setProperty("--muted", hint);
-          if(text){
-            const isLight = isColorDark(text);
+          if(p.bg_color) document.documentElement.style.setProperty("--bg", p.bg_color);
+          if(p.secondary_bg_color) document.documentElement.style.setProperty("--panel", p.secondary_bg_color);
+          if(p.text_color) document.documentElement.style.setProperty("--text", p.text_color);
+          if(p.hint_color) document.documentElement.style.setProperty("--muted", p.hint_color);
+          if(p.text_color){
+            const isLight = isColorDark(p.text_color);
             document.documentElement.setAttribute("data-theme", isLight ? "light" : "dark");
           }
-          tg.setHeaderColor(bg || "#0a0d12");
-          tg.setBackgroundColor(bg || "#0a0d12");
+          tg.setHeaderColor(p.bg_color || "#0a0d12");
+          tg.setBackgroundColor(p.bg_color || "#0a0d12");
           return true;
         }catch(e){ return false; }
       }
@@ -270,8 +193,7 @@
         const r = parseInt(hex.slice(1,3),16);
         const g = parseInt(hex.slice(3,5),16);
         const b = parseInt(hex.slice(5,7),16);
-        const luminance = (0.299*r + 0.587*g + 0.114*b)/255;
-        return luminance < 0.5;
+        return (0.299*r + 0.587*g + 0.114*b)/255 < 0.5;
       }
       if(!setThemeVarsFromTelegram()){
         const prefersLight = window.matchMedia && window.matchMedia("(prefers-color-scheme: light)").matches;
@@ -279,9 +201,8 @@
       }
     })();
 
-    // ---------- баланс ----------
+    // ========= API =========
     const API_BASE = "https://api.firstgamble.ru";
-
 
     function getTgUserId(){
       try { return window.Telegram?.WebApp?.initDataUnsafe?.user?.id || null; }
@@ -297,13 +218,39 @@
         valEl.textContent = localStorage.getItem("balance_local") || "0";
         return;
       }
+
       try{
-        const res = await fetch(`${API_BASE}/api/balance?user_id=${userId}`);
+        const res = await fetch(API_BASE + "/api/balance?user_id=" + userId);
         const data = await res.json();
         valEl.textContent = data.balance ?? 0;
         localStorage.setItem("balance_local", valEl.textContent);
       }catch(e){
         valEl.textContent = localStorage.getItem("balance_local") || "0";
+      }
+    }
+
+    // ✅ НОВЫЙ “железный” POST как в curl
+    async function sendPoint(userId, delta){
+      try{
+        const body = JSON.stringify({ user_id: String(userId), delta: Number(delta) });
+
+        const res = await fetch(API_BASE + "/api/add_point", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: body
+        });
+
+        const text = await res.text();
+        console.log("add_point raw:", text);
+
+        let json;
+        try { json = JSON.parse(text); }
+        catch { return { ok:false, error:"json_parse_fail", raw:text }; }
+
+        return json;
+      }catch(err){
+        console.log("sendPoint err:", err);
+        return { ok:false, error:String(err) };
       }
     }
 
@@ -319,6 +266,7 @@
     const resultTextEl = document.getElementById("resultText");
     const awardTextEl = document.getElementById("awardText");
     const toast = document.getElementById("toast");
+    const tgWarn = document.getElementById("tgWarn");
 
     function showToast(t){
       toast.textContent = t;
@@ -326,27 +274,21 @@
       clearTimeout(showToast._t);
       showToast._t = setTimeout(()=>toast.classList.remove("show"), 1400);
     }
-
     function clampDice(n){
       n = Number(n);
       if(!Number.isFinite(n)) n = 1;
       return Math.max(1, Math.min(5, Math.floor(n)));
     }
-
-    function rollOne(){
-      return 1 + Math.floor(Math.random()*6);
-    }
-
+    function rollOne(){ return 1 + Math.floor(Math.random()*6); }
     function renderDice(container, arr){
       container.innerHTML = "";
-      arr.forEach(v=>{
+      arr.forEach(()=> {
         const d = document.createElement("div");
         d.className = "die rolling";
         d.textContent = "•";
         container.appendChild(d);
       });
     }
-
     function stopRolling(container, arr){
       [...container.children].forEach((die, i)=>{
         die.classList.remove("rolling");
@@ -354,25 +296,11 @@
       });
     }
 
-    async function addPointIfWin(){
-      const userId = getTgUserId();
-      if(!userId) return false;
-
-      try{
-        const res = await fetch(`${API_BASE}/api/add_point`, {
-          method:"POST",
-          headers:{ "Content-Type":"application/json" },
-          body: JSON.stringify({ user_id: String(userId), delta: 1 })
-        });
-        const data = await res.json();
-        if(data && data.ok){
-          // обновим UI
-          document.getElementById("balanceValue").textContent = data.balance;
-          localStorage.setItem("balance_local", data.balance);
-          return true;
-        }
-      }catch(e){}
-      return false;
+    const realTgId = getTgUserId();
+    if(!realTgId){
+      tgWarn.textContent = "⚠️ Открывай игру внутри Telegram, иначе TG id не виден и очки не начислятся.";
+    }else{
+      tgWarn.textContent = "TG id: " + realTgId;
     }
 
     rollBtn.addEventListener("click", async ()=>{
@@ -390,7 +318,6 @@
       renderDice(youDiceEl, youRolls);
       renderDice(botDiceEl, botRolls);
 
-      // небольшая псевдо-анимация 1.2с
       await new Promise(r=>setTimeout(r, 1200));
 
       stopRolling(youDiceEl, youRolls);
@@ -405,14 +332,21 @@
         resultTextEl.textContent = `Ты победил! ${youSum} против ${botSum}`;
         resultTextEl.classList.add("win");
 
-        const ok = await addPointIfWin();
-        if(ok){
-          awardTextEl.textContent = "✅ +1 очко за победу добавлено в баланс";
-          showToast("+1 очко!");
+        const userId = getTgUserId();
+        if(!userId){
+          awardTextEl.textContent = "⚠️ Нет TG id — открой внутри Telegram.";
         }else{
-          awardTextEl.textContent = "⚠️ Победа есть, но сервер не принял очко (проверь API)";
-          showToast("Победа!");
+          const result = await sendPoint(userId, 1);
+          if(result.ok){
+            awardTextEl.textContent = "✅ +1 очко за победу добавлено";
+            document.getElementById("balanceValue").textContent = result.balance;
+            localStorage.setItem("balance_local", result.balance);
+            showToast("+1 очко!");
+          }else{
+            awardTextEl.textContent = "⚠️ API ошибка: " + (result.error || "unknown");
+          }
         }
+
       } else if(youSum < botSum){
         resultTextEl.textContent = `Ты проиграл. ${youSum} против ${botSum}`;
         resultTextEl.classList.add("lose");
