--- a/dice.html
+++ b/dice.html
@@ -16,7 +16,7 @@
       --stroke-2: rgba(100,160,255,.25);
       --blue:#3b82f6; --blue-2:#1d4ed8;
       --text:#e6edf3; --muted:#98a2b3;
-      --radius:18px; --shadow: 0 0 0 1px var(--stroke), 0 8px 30px rgba(0,0,0,.6);
+      --shadow: 0 0 0 1px var(--stroke), 0 8px 30px rgba(0,0,0,.6);
     }
     html[data-theme="light"]{
       --bg:#f4f7fb; --bg-2:#eef2f7; --panel:#ffffff;
@@ -107,7 +107,7 @@
     @keyframes roll{0%{transform:translateY(0)}50%{transform:translateY(-4px)}100%{transform:translateY(0)}}
     .result{font-size:16px;font-weight:900;margin-top:10px;}
     .result.win{color:#22c55e;} .result.lose{color:#ef4444;} .result.draw{color:#f59e0b;}
-    .note{font-size:12px;color:var(--muted);margin-top:6px;line-height:1.4;}
+    .note{font-size:12px;color:var(--muted);margin-top:6px;line-height:1.4;white-space:pre-wrap;}
     .toast{
       position:fixed;left:50%;bottom:18px;transform:translateX(-50%) translateY(20px);
       background: rgba(11,16,24,.95);border:1px solid var(--stroke-2);
@@ -115,6 +115,8 @@
       opacity:0;transition:.2s ease;box-shadow: var(--shadow);z-index:9999;pointer-events:none;white-space:nowrap;
     }
     .toast.show{opacity:1;transform:translateX(-50%) translateY(0);}
+    details.debug{margin-top:8px}
+    details.debug summary{cursor:pointer;color:var(--muted)}
     @media (max-width: 720px){.arena{grid-template-columns:1fr;}}
   </style>
 </head>
@@ -142,6 +144,10 @@
         <button id="rollBtn" class="btn">Бросить 🎲</button>
       </div>
       <div id="tgWarn" class="note"></div>
+      <details class="debug">
+        <summary>Debug (открой если TG id не виден)</summary>
+        <div id="debugInfo" class="note"></div>
+      </details>
     </section>
 
     <section class="section arena">
@@ -171,7 +177,6 @@
   <div id="toast" class="toast">Ок</div>
 
 <script>
-  // ====== Telegram + Theme ======
   function isColorDark(hex){
     if(!hex || hex[0] !== "#") return false;
     const r = parseInt(hex.slice(1,3),16), g = parseInt(hex.slice(3,5),16), b = parseInt(hex.slice(5,7),16);
@@ -181,7 +186,6 @@
   function initTelegram(){
     const tg = window.Telegram && window.Telegram.WebApp;
     if(!tg) return null;
-
     tg.ready();
     tg.expand();
 
@@ -190,13 +194,11 @@
     if(p.secondary_bg_color) document.documentElement.style.setProperty("--panel", p.secondary_bg_color);
     if(p.text_color) document.documentElement.style.setProperty("--text", p.text_color);
     if(p.hint_color) document.documentElement.style.setProperty("--muted", p.hint_color);
-
     if(p.text_color){
       document.documentElement.setAttribute("data-theme", isColorDark(p.text_color) ? "light" : "dark");
     }
     tg.setHeaderColor(p.bg_color || "#0a0d12");
     tg.setBackgroundColor(p.bg_color || "#0a0d12");
-
     return tg;
   }
 
@@ -206,14 +208,24 @@
     document.documentElement.setAttribute("data-theme", prefersLight ? "light" : "dark");
   }
 
-  function getTgUserId(){
+  function getUidFromUrl(){
     try{
-      if(!tg) return null;
-      return tg.initDataUnsafe?.user?.id || null;
+      const u = new URL(location.href);
+      return u.searchParams.get("uid");
     }catch(e){ return null; }
   }
 
-  // ====== API ======
+  function getTgUserId(){
+    try{
+      if(tg && tg.initDataUnsafe && tg.initDataUnsafe.user && tg.initDataUnsafe.user.id){
+        return tg.initDataUnsafe.user.id;
+      }
+      const urlUid = getUidFromUrl();
+      if(urlUid) return urlUid;
+      return null;
+    }catch(e){ return null; }
+  }
+
   const API_BASE = "https://api.firstgamble.ru";
 
   async function loadBalance(){
@@ -222,8 +234,7 @@
     if(!valEl) return;
 
     if(!userId){
-      const local = localStorage.getItem("balance_local") || "0";
-      valEl.textContent = local;
+      valEl.textContent = localStorage.getItem("balance_local") || "0";
       return;
     }
     try{
@@ -253,7 +264,6 @@
     }
   }
 
-  // ====== UI helpers ======
   const diceCountEl = document.getElementById("diceCount");
   const rollBtn = document.getElementById("rollBtn");
   const youDiceEl = document.getElementById("youDice");
@@ -264,6 +274,7 @@
   const awardTextEl = document.getElementById("awardText");
   const toast = document.getElementById("toast");
   const tgWarn = document.getElementById("tgWarn");
+  const debugInfo = document.getElementById("debugInfo");
 
   function showToast(t){
     toast.textContent = t;
@@ -295,16 +306,30 @@
     });
   }
 
-  // ====== init ======
+  function fillDebug(){
+    const lines = [];
+    lines.push("telegram_present: " + Boolean(window.Telegram && window.Telegram.WebApp));
+    lines.push("tg_object: " + (tg ? "ok" : "null"));
+    lines.push("initData length: " + (tg?.initData?.length || 0));
+    lines.push("initDataUnsafe: " + JSON.stringify(tg?.initDataUnsafe || {}));
+    lines.push("platform: " + (tg?.platform || "unknown"));
+    lines.push("url_uid: " + (getUidFromUrl() || "null"));
+    debugInfo.textContent = lines.join("\n");
+  }
+
   const uid = getTgUserId();
   if(!uid){
-    tgWarn.textContent = "⚠️ Открыто НЕ в Telegram MiniApp. Игра работает, но очки НЕ начисляются.";
+    tgWarn.textContent =
+      "⚠️ TG id не пришёл.\n" +
+      "1) Открой миниаппку ТОЛЬКО через кнопку web_app в боте.\n" +
+      "2) В BotFather добавь домен в /setdomain (first-gamble.vercel.app и firstgamble.ru).\n" +
+      "3) Если нужно — можно передавать uid параметром: ?uid=ТВОЙ_ID";
   }else{
     tgWarn.textContent = "TG id: " + uid;
   }
+  fillDebug();
   loadBalance();
 
-  // ====== game ======
   rollBtn.addEventListener("click", async ()=>{
     const n = clampDice(diceCountEl.value);
     diceCountEl.value = n;
@@ -349,7 +374,6 @@
           awardTextEl.textContent = "⚠️ Сервер не принял очко: " + (res.error || "unknown");
         }
       }
-
     }else if(youSum < botSum){
       resultTextEl.textContent = `Ты проиграл. ${youSum} против ${botSum}`;
       resultTextEl.classList.add("lose");
@@ -359,6 +383,7 @@
     }
 
     rollBtn.disabled = false;
+    fillDebug();
   });
 </script>
 </body>
