--- a/index.html
+++ b/index.html
@@ -1,319 +1,109 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>FirstClub — MiniApp</title>
-  <style>
-:root{
-  --bg:#0a0d12;
-  --bg-2:#0e1117;
-  --panel:#0d1117;
-  --card:#111722;
-  --card-2:#0f1520;
-  --stroke: rgba(255,255,255,.06);
-  --stroke-2: rgba(100,160,255,.25);
-  --blue:#3b82f6;
-  --blue-2:#1d4ed8;
-  --text:#e6edf3;
-  --muted:#98a2b3;
-  --radius:18px;
-  --radius-sm:12px;
-  --shadow: 0 0 0 1px var(--stroke), 0 8px 30px rgba(0,0,0,.6);
-}
-html[data-theme="light"]{
-  --bg:#f4f7fb;
-  --bg-2:#eef2f7;
-  --panel:#ffffff;
-  --card:#ffffff;
-  --card-2:#f6f8fb;
-  --stroke: rgba(10,20,40,.08);
-  --stroke-2: rgba(59,130,246,.35);
-  --blue:#2563eb;
-  --blue-2:#1d4ed8;
-  --text:#0b1220;
-  --muted:#52607a;
-  --shadow: 0 0 0 1px var(--stroke), 0 10px 26px rgba(10,20,40,.08);
-}
-*{box-sizing:border-box}
-body{
-  margin:0;
-  font-family: system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
-  color:var(--text);
-  background:
-    radial-gradient(1000px 600px at 10% -10%, rgba(59,130,246,.28), transparent 60%),
-    radial-gradient(800px 500px at 110% 0%, rgba(29,78,216,.22), transparent 55%),
-    linear-gradient(180deg, var(--bg-2) 0%, var(--bg) 100%);
-  min-height:100vh;
-  display:flex;
-  align-items:flex-start;
-  justify-content:center;
-  padding:16px;
-}
-.app{
-  width:min(1100px,100%);
-  background: linear-gradient(180deg, rgba(255,255,255,.03), rgba(255,255,255,0));
-  border:1px solid var(--stroke);
-  border-radius:20px;
-  box-shadow: var(--shadow);
-  padding:14px;
-}
-header{
-  display:flex;
-  align-items:center;
-  justify-content:space-between;
-  padding:10px 12px 14px;
-  gap:10px;
-}
-.title{display:flex;flex-direction:column;gap:2px;}
-.title h1{
-  margin:0;font-size:20px;font-weight:800;letter-spacing:.2px;
-  color: var(--text);
-  text-shadow:0 0 18px rgba(59,130,246,.25);
-}
-.title span{font-size:12px;color:var(--muted);}
-
-.balance-pill{
-  margin-left:auto;
-  display:flex;align-items:center;gap:8px;
-  padding:7px 10px;border-radius:999px;
-  font-weight:800;font-size:14px;
-  background: linear-gradient(180deg, var(--card) 0%, var(--card-2) 100%);
-  border:1px solid var(--stroke);
-  box-shadow: var(--shadow);
-}
-.balance-coin{filter: drop-shadow(0 0 6px rgba(59,130,246,.35));}
-
-.back{
-  display:inline-flex;align-items:center;gap:8px;
-  padding:8px 12px;border-radius:10px;
-  background: linear-gradient(180deg, var(--card) 0%, var(--card-2) 100%);
-  border:1px solid var(--stroke);
-  color:var(--text);text-decoration:none;font-weight:700;font-size:14px;
-  cursor:pointer;transition:.15s ease;
-}
-.back:hover{border-color:var(--stroke-2);transform:translateY(-1px);}
-
-.grid{
-  display:grid;
-  grid-template-columns: 1.15fr .85fr;
-  gap:12px;padding:0 4px 8px;
-}
-.col{display:grid;grid-template-columns:1fr;gap:12px;}
-a.card-btn,button.card-btn{
-  position:relative;display:block;text-align:left;
-  background:
-    radial-gradient(600px 220px at 10% -30%, rgba(59,130,246,.16), transparent 60%),
-    linear-gradient(180deg, var(--card) 0%, var(--card-2) 100%);
-  border:1px solid var(--stroke);
-  border-radius:var(--radius);
-  padding:16px;min-height:96px;
-  cursor:pointer;transition:.18s ease;
-  box-shadow: inset 0 0 0 1px rgba(255,255,255,.02);
-  overflow:hidden;color:inherit;text-decoration:none;
-}
-.card-btn:hover{
-  transform: translateY(-1px);
-  border-color: var(--stroke-2);
-  box-shadow: 0 0 0 1px rgba(59,130,246,.25), 0 12px 30px rgba(8,12,18,.55);
-}
-.card-row{display:flex;gap:12px;align-items:flex-start;}
-.icon{
-  width:40px;height:40px;display:grid;place-items:center;
-  background: rgba(59,130,246,.10);
-  border:1px solid rgba(59,130,246,.25);
-  border-radius:12px;font-size:20px;flex:0 0 auto;
-  box-shadow: inset 0 0 20px rgba(59,130,246,.15);
-}
-.card-text h3{margin:0 0 4px;font-size:16px;font-weight:800;}
-.card-text p{margin:0;font-size:12.5px;color:var(--muted);}
-
-.section{
-  background: linear-gradient(180deg, var(--panel) 0%, color-mix(in oklab, var(--panel) 92%, transparent) 100%);
-  border:1px solid var(--stroke);
-  border-radius:16px;
-  padding:14px;
-  box-shadow: var(--shadow);
-}
-.section h2{margin:0 0 10px;font-size:18px;}
-.subgrid{
-  display:grid;grid-template-columns:repeat(2,1fr);gap:10px;
-}
-.tile{
-  background: linear-gradient(180deg, var(--card) 0%, var(--card-2) 100%);
-  border:1px solid var(--stroke);
-  border-radius:14px;padding:12px;min-height:70px;
-}
-.tile h4{margin:0 0 4px;font-size:14.5px;}
-.tile p{margin:0;font-size:12px;color:var(--muted);line-height:1.4;}
-
-.footer{
-  padding:10px 12px 6px;text-align:center;font-size:11px;color:var(--muted);
-  border-top:1px dashed var(--stroke);margin-top:8px;line-height:1.6;
-}
-
-@media (max-width: 720px){
-  .grid{grid-template-columns:1fr;}
-  .card-btn{min-height:86px;}
-  .subgrid{grid-template-columns:1fr;}
-}
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>FirstClub — FirstClub</title>
+<script src="https://telegram.org/js/telegram-web-app.js"></script>
+<style>
+:root{--bg:#0a0d12;--bg2:#0e1117;--panel:#0d1117;--card:#111722;--card2:#0f1520;--stroke:rgba(255,255,255,.06);--stroke2:rgba(100,160,255,.25);--blue:#3b82f6;--blue2:#1d4ed8;--text:#e6edf3;--muted:#98a2b3;--shadow:0 0 0 1px var(--stroke),0 8px 30px rgba(0,0,0,.6);}
+html[data-theme="light"]{--bg:#f4f7fb;--bg2:#eef2f7;--panel:#fff;--card:#fff;--card2:#f6f8fb;--stroke:rgba(10,20,40,.08);--stroke2:rgba(59,130,246,.35);--blue:#2563eb;--blue2:#1d4ed8;--text:#0b1220;--muted:#52607a;--shadow:0 0 0 1px var(--stroke),0 10px 26px rgba(10,20,40,.08);}
+*{box-sizing:border-box} body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;color:var(--text);
+background:radial-gradient(1000px 600px at 10% -10%,rgba(59,130,246,.28),transparent 60%),
+radial-gradient(800px 500px at 110% 0%,rgba(29,78,216,.22),transparent 55%),
+linear-gradient(180deg,var(--bg2) 0%,var(--bg) 100%);min-height:100vh;display:flex;justify-content:center;padding:16px;}
+.app{width:min(1000px,100%);border:1px solid var(--stroke);border-radius:20px;box-shadow:var(--shadow);padding:14px;
+background:linear-gradient(180deg,rgba(255,255,255,.03),rgba(255,255,255,0));}
+header{display:flex;align-items:center;justify-content:space-between;padding:10px 12px 14px;gap:10px;}
+.title{display:flex;flex-direction:column;gap:2px;align-items:center;flex:1;}
+.title h1{margin:0;font-size:20px;font-weight:800;} .title span{font-size:12px;color:var(--muted);}
+.back{display:inline-flex;align-items:center;gap:8px;padding:8px 12px;border-radius:10px;background:linear-gradient(180deg,var(--card) 0%,var(--card2) 100%);
+border:1px solid var(--stroke);color:var(--text);text-decoration:none;font-weight:700;font-size:14px;cursor:pointer;transition:.15s ease;}
+.back:hover{border-color:var(--stroke2);transform:translateY(-1px);}
+.balance-pill{display:flex;align-items:center;gap:8px;padding:7px 10px;border-radius:999px;font-weight:800;font-size:14px;
+background:linear-gradient(180deg,var(--card) 0%,var(--card2) 100%);border:1px solid var(--stroke);box-shadow:var(--shadow);min-width:64px;justify-content:center;}
+.section{background:linear-gradient(180deg,var(--panel) 0%,color-mix(in oklab,var(--panel) 92%,transparent) 100%);border:1px solid var(--stroke);
+border-radius:16px;padding:14px;box-shadow:var(--shadow);margin-bottom:12px;}
+.grid{display:grid;grid-template-columns:1.2fr 1fr;gap:12px;}
+.cardbtn{display:flex;justify-content:space-between;align-items:center;padding:14px;border-radius:14px;border:1px solid var(--stroke);
+background:linear-gradient(180deg,var(--card) 0%,var(--card2) 100%);cursor:pointer;transition:.15s ease;text-decoration:none;color:var(--text);}
+.cardbtn:hover{border-color:var(--stroke2);transform:translateY(-1px);} .cardbtn h3{margin:0;font-size:16px;font-weight:900;}
+.cardbtn p{margin:4px 0 0;font-size:12px;color:var(--muted);}
+@media (max-width:720px){.grid{grid-template-columns:1fr;}}
 </style>
 </head>
 <body>
-  <div class="app">
-    <header>
-      <div class="title">
-        <h1>FirstClub</h1>
-        <span>Выбери раздел</span>
-      </div>
+<div class="app">
+<header>
+<a class="back" href="/">← Назад</a>
+<div class="title">
+<h1>FirstClub</h1>
+<span>Выбери раздел</span>
+</div>
+<div class="balance-pill"><span>🪙</span><span id="balanceValue">0</span></div>
+</header>
 
-      <div class="balance-pill" id="balancePill">
-        <span class="balance-coin">🪙</span>
-        <span id="balanceValue">0</span>
-      </div>
-    </header>
-
-    <main class="grid">
-      <section class="col">
-        <a class="card-btn" href="/ludka">
-          <div class="card-row">
-            <div class="icon">🎰</div>
-            <div class="card-text">
-              <h3>Лудка</h3>
-              <p>Мини-игры</p>
-            </div>
-          </div>
-        </a>
-
-        <a class="card-btn" href="/rpg">
-          <div class="card-row">
-            <div class="icon">🗺️</div>
-            <div class="card-text">
-              <h3>RPG</h3>
-              <p>Прокачка, квесты, статистика</p>
-            </div>
-          </div>
-        </a>
-
-        <a class="card-btn" href="/raffles">
-          <div class="card-row">
-            <div class="icon">🎁</div>
-            <div class="card-text">
-              <h3>Розыгрыши</h3>
-              <p>Анимация и тизер “Скоро”</p>
-            </div>
-          </div>
-        </a>
-      </section>
-
-      <section class="col">
-        <a class="card-btn" href="/prices">
-          <div class="card-row">
-            <div class="icon">🪙</div>
-            <div class="card-text">
-              <h3>Цены</h3>
-              <p>Прайс-листы, справочник, поиск</p>
-            </div>
-          </div>
-        </a>
-
-        <a class="card-btn" href="/shop">
-          <div class="card-row">
-            <div class="icon">🛒</div>
-            <div class="card-text">
-              <h3>Магазин</h3>
-              <p>Товары, покупки, бонусы</p>
-            </div>
-          </div>
-        </a>
-      </section>
-    </main>
-
-    <div class="footer">
-      v0.3 — тестовый билд<br/>
-      За идею спасибо Con_Serve(aka romanespit)<br/>
-      Сделано специально для семьи First|07<br/>
-      First Forever!
+<section class="section grid">
+  <a class="cardbtn" href="/ludka">
+    <div>
+      <h3>🎰 Лудка</h3>
+      <p>Мини‑игры</p>
     </div>
-  </div>
+    <div>→</div>
+  </a>
 
-  <script>
-(function(){
-  function setThemeVarsFromTelegram(){
-    try{
-      const tg = window.Telegram && window.Telegram.WebApp;
-      if(!tg) return false;
-      tg.ready(); tg.expand();
-      const p = tg.themeParams || {};
-      const bg = p.bg_color;
-      const text = p.text_color;
-      const hint = p.hint_color;
-      const secondary = p.secondary_bg_color;
-      if(bg) document.documentElement.style.setProperty("--bg", bg);
-      if(secondary) document.documentElement.style.setProperty("--panel", secondary);
-      if(text) document.documentElement.style.setProperty("--text", text);
-      if(hint) document.documentElement.style.setProperty("--muted", hint);
+  <a class="cardbtn" href="/prices">
+    <div>
+      <h3>💰 Цены</h3>
+      <p>Прайс‑листы, справочник, поиск</p>
+    </div>
+    <div>→</div>
+  </a>
 
-      if(text){
-        const isLight = isColorDark(text); // темный текст => светлый фон
-        document.documentElement.setAttribute("data-theme", isLight ? "light" : "dark");
-      }
-      tg.setHeaderColor(bg || "#0a0d12");
-      tg.setBackgroundColor(bg || "#0a0d12");
-      return true;
-    }catch(e){ return false; }
-  }
+  <a class="cardbtn" href="/rpg">
+    <div>
+      <h3>🗺️ RPG</h3>
+      <p>Прокачка, квесты, статистика</p>
+    </div>
+    <div>→</div>
+  </a>
 
-  function isColorDark(hex){
-    if(!hex || hex[0] !== "#") return false;
-    const r = parseInt(hex.slice(1,3),16);
-    const g = parseInt(hex.slice(3,5),16);
-    const b = parseInt(hex.slice(5,7),16);
-    const luminance = (0.299*r + 0.587*g + 0.114*b)/255;
-    return luminance < 0.5;
-  }
+  <a class="cardbtn" href="/shop">
+    <div>
+      <h3>🛒 Магазин</h3>
+      <p>Товары, покупки, бонусы</p>
+    </div>
+    <div>→</div>
+  </a>
 
-  if(!setThemeVarsFromTelegram()){
-    const prefersLight = window.matchMedia && window.matchMedia("(prefers-color-scheme: light)").matches;
-    document.documentElement.setAttribute("data-theme", prefersLight ? "light" : "dark");
-  }
-})();
-</script>
-  <script>
-const API_BASE = "https://api.firstgamble.ru";
+  <a class="cardbtn" href="/raffles">
+    <div>
+      <h3>🎁 Розыгрыши</h3>
+      <p>Анимации и тизер «Скоро»</p>
+    </div>
+    <div>→</div>
+  </a>
+</section>
 
-// Примеры:
-// 1) если без nginx: https://firstclub.ru:8080
-// 2) если через nginx proxy: https://api.firstclub.ru
+</div>
 
-function getTgUserId(){
-  try {
-    return window.Telegram?.WebApp?.initDataUnsafe?.user?.id || null;
-  } catch(e){ return null; }
+<script>
+function isColorDark(hex){ if(!hex||hex[0]!=="#") return false; const r=parseInt(hex.slice(1,3),16),g=parseInt(hex.slice(3,5),16),b=parseInt(hex.slice(5,7),16);
+return (0.299*r+0.587*g+0.114*b)/255<0.5;}
+function initTelegram(){ const tg=window.Telegram&&window.Telegram.WebApp; if(!tg) return null; tg.ready(); tg.expand();
+const p=tg.themeParams||{}; if(p.bg_color) document.documentElement.style.setProperty("--bg",p.bg_color); if(p.secondary_bg_color) document.documentElement.style.setProperty("--panel",p.secondary_bg_color);
+if(p.text_color) document.documentElement.style.setProperty("--text",p.text_color); if(p.hint_color) document.documentElement.style.setProperty("--muted",p.hint_color);
+if(p.text_color) document.documentElement.setAttribute("data-theme", isColorDark(p.text_color) ? "light":"dark");
+tg.setHeaderColor(p.bg_color||"#0a0d12"); tg.setBackgroundColor(p.bg_color||"#0a0d12"); return tg; }
+const tg=initTelegram(); if(!tg){ const prefersLight=window.matchMedia&&window.matchMedia("(prefers-color-scheme: light)").matches; document.documentElement.setAttribute("data-theme", prefersLight?"light":"dark"); }
+function getUidFromUrl(){ try{const u=new URL(location.href); return u.searchParams.get("uid");}catch(e){return null;} }
+function getTgUserId(){ try{ return tg?.initDataUnsafe?.user?.id || getUidFromUrl(); }catch(e){ return getUidFromUrl(); } }
+const API_BASE="https://api.firstgamble.ru";
+async function loadBalance(){ const uid=getTgUserId(); const el=document.getElementById("balanceValue"); if(!el) return;
+if(!uid){ el.textContent=localStorage.getItem("balance_local")||"0"; return; }
+try{ const r=await fetch(API_BASE+"/api/balance?user_id="+uid); const d=await r.json(); el.textContent=d.balance??0; localStorage.setItem("balance_local", el.textContent); }
+catch(e){ el.textContent=localStorage.getItem("balance_local")||"0"; }
 }
-
-async function loadBalance(){
-  const userId = getTgUserId();
-  const valEl = document.getElementById("balanceValue");
-  if(!valEl) return;
-
-  if(!userId){
-    const localBal = localStorage.getItem("balance_local") || "0";
-    valEl.textContent = localBal;
-    return;
-  }
-
-  try{
-    const res = await fetch(`${API_BASE}/api/balance?user_id=${userId}`);
-    const data = await res.json();
-    valEl.textContent = data.balance ?? 0;
-    localStorage.setItem("balance_local", valEl.textContent);
-  }catch(e){
-    const localBal = localStorage.getItem("balance_local") || "0";
-    valEl.textContent = localBal;
-  }
-}
-
 loadBalance();
 </script>
 </body>
